tests/error/func_arg_array_empty.gw
// [contains] must be defined with empty
fun int[] my_func(int i[2]){}
